Este es una actualizacion del curso EMAScript y un nuevo projecto

--- a/curso-ecmascript/package.json
+++ b/curso-ecmascript/package.json
@@ -12,5 +12,6 @@
     "course"
   ],
   "author": "Leiker Gomez <leiker.dgs@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "type" : "module"
 }
