--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "callback": "node ./curso-asincronismo/src/callback/challenge.js "
+  },
   "dependencies": {
-    "node-fetch": "^3.3.1"
-  }
+    "fetch": "^1.1.0",
+    "node": "^19.8.1",
+    "node-fetch": "^3.3.1",
+    "xmlhttprequest": "^1.8.0"
+  },
+  "type": "module"
 }
